fix z-index thingy for add button

--- a/src/components/HomePage/styles.css
+++ b/src/components/HomePage/styles.css
@@ -3,6 +3,10 @@
   flex-direction: row-reverse
 }
 
+:local .topbutton {
+  z-index: 200;
+}
+
 :local .card {
   margin-bottom: 1em;
 }
